--- a/design.css
+++ b/design.css
@@ -49,3 +49,10 @@ h3,
 p {
   padding-left: 30px;
 }
+img {
+  width: 250px;
+  border-radius: 50px;
+  float: left;
+  margin-top: 15px;
+  margin-right: 30px;
+}
