--- a/design.css
+++ b/design.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #ffe173;
   border: 2px solid black;
   min-height: 100%;
 }
@@ -48,6 +49,12 @@ h1,
 h3,
 p {
   padding-left: 30px;
+}
+p {
+  max-width: 1500px;
+}
+h2 {
+  margin-left: 30px;
 }
 img {
   width: 250px;
